# telegram_detox_bot

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  ignored_chats.py  logging_config.py  main.py
app/birthdays/: __init__.py  manual.py  models.py  service.py  telegram.py
app/cli/: add_ignored_chat.py  cancel_legacy_alerts.py  cancel_unsafe_digests.py  check_birthdays.py  check_ignored_chats.py  cleanup.py  digest_now.py  gmail_auth.py  healthcheck.py  list_chats.py  llm_smoke.py  p0_check.py  run.py  security_check.py  setup_env.py  telegram_login.py  test_email.py  test_llm.py
app/db/: repository.py  session.py  tables.py
app/email/: render.py  sender.py
app/llm/: client.py
app/models/: schemas.py
app/services/: digest.py  maintenance.py  p0.py  prefilter.py  text.py  time_format.py
app/telegram/: backfill.py  client.py  mapper.py
data/: birthdays.example.json  ignored_chats.example.json
deploy/: backup_sqlite.sh  telegram-detox.service.example
docker/: Dockerfile
docs/: deploy_vps.md
tests/: conftest.py  test_backfill.py  test_birthdays.py  test_cleanup.py  test_config.py  test_deployment.py  test_digest.py  test_email_cli.py  test_email_sender.py  test_gitignore.py  test_gmail_auth.py  test_ignored_chats.py  test_llm_errors.py  test_llm_validation.py  test_logging_security.py  test_p0.py  test_p0_check.py  test_prefilter.py  test_setup_env.py  test_telegram_safety.py  test_time_format.py
tests/fixtures/: messages.py
