[project]
name = "telegram-digest"
version = "0.1.0"
description = "Read-only Telegram MTProto digest service with P0 email alerts"
requires-python = ">=3.12"
dependencies = [
  "apscheduler>=3.10.4",
  "openai>=1.68.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "sqlalchemy>=2.0.36",
  "telethon>=1.38.1",
  "google-auth>=2.35.0",
  "google-auth-oauthlib>=1.2.1",
  "google-api-python-client>=2.150.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
